# CaseBem

./: .env.example  .gitignore  .mcp.json  CLEAN.md  CORRECOES_FINAIS.md  Consideracoes_de_Design.md  Dockerfile  FLASH_MESSAGES_SYSTEM.md  IMPLEMENTACAO_ITEM_DEMANDA_ORCAMENTO.md  LIMPEZA_CONCLUIDA.md  MAROQUIO.md  MYPY_FIXES.md  PARECER.md  README.md  REFATORACAO_DEMANDA_ORCAMENTO_V2.md  RELATORIO_REFATORACAO.md  RESOLVER_PYLANCE.md  TESTS_E2E.md  TOASTS.md  codebase.md  codebase_auth.md  corrigir_orcamentos.sql  dados.db  dados.db.old  dados.db.rename  download_imagens.py  fix_tests.py  geracao_completa_imagens.py  main.py  mypy.ini  popular_demandas_orcamentos.sql  popular_demandas_orcamentos.sql.bak  popular_demandas_orcamentos_fixed.sql  popular_final.sql  pyproject.toml  pyrightconfig.json  pytest.ini  relatorio_renomeacao_fotos.md  renomear_fotos.py  requirements.txt  (+3 more)
api/: __init__.py
config/: __init__.py  constants.py
core/: __init__.py  exceptions.py
data/: README.md  casais.json  categorias.json  itens.json
docs/: ANALISE_COMPLETA_DEMANDAS_ORCAMENTOS.md  ANALISE_FASE4_vs_PLANEJAMENTO.md  ARCHITECTURE.md  ARCHITECTURE_DEMANDAS_ORCAMENTOS.md  AUTH.md  CONTRIBUTING.md  CORRECAO_PERFIL_ADMIN.md  CORRECOES_AUTH.md  DTO.md  EMAIL_CONFIG.md  EMAIL_CONFIG_MIGRATION.md  EMAIL_SERVICE.md  FACTORIES_GUIA.md  FASE1.md  FASE2.md  FASE3.md  FASE4.md  FASE4_IMPLEMENTACAO_COMPLETA.md  FASE5.md  FASE5_AVALIACAO_FINAL.md  FASE5_IMPLEMENTACAO_COMPLETA.md  FLASH_MESSAGES_SYSTEM.md  GUIA_USO_FACTORIES.md  IMPROVEMENTS.md  MAILERSEND_SERVICE.md  MAROQUIO.md  MIDDLEWARE_ANALYSIS.md  MIGRACAO_EMAIL_RESEND.md  REFATORACAO.md  REFATORACAO_FINAL.md  RESUMO_EXECUTIVO.md  SQL_QUERIES_GUIDE.md  STYLE_GUIDE.md  TOAST_SYSTEM.md  codebase_original.md
dtos/: __init__.py  admin_usuario_dto.py  alterar_senha_dto.py  base_dto.py  cadastro_fornecedor_dto.py  cadastro_noivos_dto.py  categoria_dto.py  categoria_dtos.py  categoria_item_dto.py  demanda_noivo_dto.py  item_dtos.py  item_fornecedor_dto.py  login_dto.py  noivos_dtos.py  orcamento_dtos.py  perfil_admin_dto.py  perfil_fornecedor_dto.py  perfil_noivo_dto.py  proposta_orcamento_dto.py  usuario_dtos.py
infrastructure/: __init__.py
middleware/: flash_middleware.py
migrations/: add_categoria_to_item.py  add_newsletter_to_fornecedor.py
model/: administrador_model.py  casal_model.py  categoria_item_model.py  categoria_model.py  chat_model.py  contrato_model.py  demanda_model.py  fornecedor_item_model.py  fornecedor_model.py  fornecedor_produto_model.py  item_contrato_produto_model.py  item_contrato_servico_model.py  item_demanda_produto_model.py  item_demanda_servico_model.py  item_model.py  item_orcamento_produto_model.py  item_orcamento_servico_model.py  noivo_model.py  prestador_model.py  prestador_servico_model.py  produto_model.py  profissional_model.py  servico_model.py  usuario_model.py
repo/: administrador_repo.py  casal_repo.py  categoria_item_repo.py  categoria_repo.py  chat_repo.py  contrato_repo.py  demanda_repo.py  favorito_repo.py  fornecedor_item_repo.py  fornecedor_produto_repo.py  fornecedor_repo.py  item_contrato_produto_repo.py  item_contrato_servico_repo.py  item_demanda_produto_repo.py  item_demanda_repo.py  item_demanda_servico_repo.py  item_orcamento_produto_repo.py  item_orcamento_repo.py  item_orcamento_servico_repo.py  item_repo.py  noivo_repo.py  orcamento_repo.py  prestador_repo.py  prestador_servico_repo.py  produto_repo.py  profissional_repo.py  servico_repo.py  (+1 more)
(+329 files in other folders)
